--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mautours | Discover Mauritius</title>
+  <title>Mautours – Explore Mauritius</title>
   <link rel="stylesheet" href="css/style.css" />
-  <script defer src="js/main.js"></script>
 </head>
 <body>
-  <!-- Header -->
+
+  <!-- ===== Header ===== -->
   <header class="site-header">
-    <div class="container between">
+    <div class="container">
       <h1 class="logo">Mautours</h1>
-      <nav class="nav" id="navMenu">
+      <nav class="nav" id="nav">
         <a href="index.html" class="active">Home</a>
         <a href="booking.html">Book</a>
         <a href="login.html">Login</a>
@@ -24,75 +24,72 @@
     </div>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero fade-in">
-    <div class="hero-overlay"></div>
-    <div class="hero-content">
-      <h2>Welcome to Mautours 🌴</h2>
-      <p>Discover Mauritius like never before — beaches, lagoons, and adventures crafted for you.</p>
+  <!-- ===== Hero ===== -->
+  <section class="hero">
+    <div class="hero-content fade-in">
+      <h2>Discover Paradise with Mautours</h2>
+      <p>Unforgettable island adventures, crafted with care in Mauritius.</p>
       <a href="booking.html" class="btn">Start Your Journey</a>
     </div>
   </section>
 
-  <!-- About Us -->
-  <section class="container about fade-in">
-    <h2>About Us</h2>
-    <p>
-      At <strong>Mautours</strong>, we believe every traveler deserves a unique experience.
-      From serene catamaran cruises to breathtaking mountain drives, we design each trip
-      to showcase the heart and soul of Mauritius.
-    </p>
-  </section>
-
-  <!-- Highlights -->
-  <section class="container highlights fade-in">
-    <h2>Our Most Loved Experiences</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="assets/ile.jpg" alt="Île aux Cerfs" />
-        <h3>Île aux Cerfs Catamaran</h3>
-        <p>Glide across turquoise lagoons, enjoy a BBQ lunch and relax on paradise beaches.</p>
-      </div>
-      <div class="card">
-        <img src="assets/wildsouth.jpg" alt="Wild South" />
-        <h3>Wild South Discovery</h3>
-        <p>Witness waterfalls, sacred lakes, and volcanic landscapes on this scenic island tour.</p>
-      </div>
-      <div class="card">
-        <img src="assets/transfer.jpg" alt="Transfer" />
-        <h3>Airport Transfers</h3>
-        <p>Reliable, comfortable, and friendly transfer service to any destination in Mauritius.</p>
-      </div>
-    </div>
-    <div class="center">
-      <a href="booking.html" class="btn-outline">View All Packages</a>
+  <!-- ===== About ===== -->
+  <section class="about fade-in">
+    <div class="container">
+      <h2>About Us</h2>
+      <p>
+        At <b>Mautours</b>, we believe every traveller deserves a unique experience.
+        From serene catamaran cruises to breathtaking mountain drives, we craft each
+        journey to showcase the heart and soul of Mauritius.
+      </p>
     </div>
   </section>
 
-  <!-- Contact -->
+  <!-- ===== Experiences ===== -->
+  <section class="packages fade-in">
+    <div class="container">
+      <h2>Our Most Loved Experiences</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="assets/ile.jpg" alt="Île aux Cerfs" />
+          <h3>Île aux Cerfs Catamaran</h3>
+          <p>Glide across turquoise lagoons, enjoy a BBQ lunch and relax on paradise beaches.</p>
+        </div>
+        <div class="card">
+          <img src="assets/south.jpg" alt="Wild South" />
+          <h3>Wild South Discovery</h3>
+          <p>Witness waterfalls, sacred lakes, and volcanic landscapes on this scenic tour.</p>
+        </div>
+        <div class="card">
+          <img src="assets/transfer.jpg" alt="Transfer" />
+          <h3>Airport Transfers</h3>
+          <p>Travel comfortably to and from the airport with our premium transfer service.</p>
+        </div>
+      </div>
+      <div class="center" style="margin-top: 2rem;">
+        <a href="booking.html" class="btn-outline">View All Packages</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== Contact ===== -->
   <section class="contact fade-in">
     <div class="container">
-      <h2>Get in Touch</h2>
-      <p>Ready to plan your dream trip? Let’s talk!</p>
-      <form id="contactForm">
-        <input type="text" placeholder="Your Name" required />
-        <input type="email" placeholder="Your Email" required />
-        <textarea placeholder="Your Message" rows="4" required></textarea>
-        <button class="btn">Send Message</button>
-      </form>
+      <h2>Contact Us</h2>
+      <p>Have questions or special requests? We’d love to hear from you.</p>
       <div class="contact-details">
-        <p>📍 Ebene, Mauritius</p>
-        <p>📞 +230 5254 2792</p>
-        <p>✉️ info@mautours.mu</p>
+        <p>📍 Mauritius | 📞 +230 5254 2792 | ✉️ info@mautours.mu</p>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- ===== Footer ===== -->
   <footer class="footer">
-    <p>© 2025 Mautours | Crafted with ❤️ in Mauritius</p>
+    <p>© 2025 Mautours. Crafted with ❤️ in Mauritius.</p>
   </footer>
 
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
+  <a href="https://wa.me/23052542792" class="whatsapp-btn">💬 Chat on WhatsApp</a>
+
+  <script defer src="js/main.js"></script>
 </body>
 </html>
