--- a/admin.html
+++ b/admin.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Dashboard | Mautours</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <script type="module" src="js/admin.js"></script>
-  <script defer src="js/main.js"></script>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dashboard | Mautours</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
   <header class="site-header">
-    <div class="container between">
-      <h1 class="logo">Mautours Dashboard</h1>
-      <nav class="nav" id="navMenu">
+    <div class="container">
+      <h1 class="logo">Mautours</h1>
+      <nav class="nav" id="nav">
         <a href="index.html">Home</a>
         <a href="booking.html">Book</a>
         <a href="login.html">Login</a>
         <a href="admin.html" class="active">Dashboard</a>
       </nav>
+      <div class="hamburger" id="hamburger">
+        <span></span><span></span><span></span>
+      </div>
     </div>
   </header>
 
   <section class="container fade-in">
-    <h2>All Bookings</h2>
-    <table>
+    <h2 class="center">Admin Dashboard</h2>
+    <p class="center">Manage bookings below.</p>
+
+    <table id="bookingTable">
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Excursion</th>
-          <th>Date</th>
-          <th>People</th>
-          <th>Total</th>
-          <th>Status</th>
+          <th>Package</th>
+          <th>Customer</th>
+          <th>Amount (Rs)</th>
+          <th>Action</th>
         </tr>
       </thead>
-      <tbody id="bookingTable"></tbody>
+      <tbody></tbody>
     </table>
   </section>
 
   <footer class="footer">
-    <p>© 2025 Mautours | Admin View</p>
+    <p>© 2025 Mautours. Admin Dashboard.</p>
   </footer>
+
+  <script type="module" src="js/admin.js"></script>
+  <script defer src="js/main.js"></script>
 </body>
 </html>
