--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ===== Header ===== -->
   <header class="site-header">
-    <div class="container">
+    <div class="container nav-container">
       <h1 class="logo">Mautours</h1>
       <nav class="nav" id="nav">
         <a href="index.html" class="active">Home</a>
@@ -90,6 +90,7 @@
 
   <a href="https://wa.me/23052542792" class="whatsapp-btn">💬 Chat on WhatsApp</a>
 
+  <!-- Keep defer so DOM loads before JS -->
   <script defer src="js/main.js"></script>
 </body>
 </html>
