--- a/login.html
+++ b/login.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | Mautours</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mautours – Login</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
   <header class="site-header">
-    <div class="container">
+    <div class="nav-container">
       <h1 class="logo">Mautours</h1>
       <nav class="nav" id="nav">
         <a href="index.html">Home</a>
@@ -23,22 +22,24 @@
     </div>
   </header>
 
-  <section class="form-section fade-in">
-    <h2 class="center">Login or Register</h2>
-    <form id="loginForm">
-      <label>Email</label>
-      <input type="email" id="email" required>
-      <label>Password</label>
-      <input type="password" id="password" required>
-      <button type="submit" class="btn">Login / Register</button>
+  <main class="container center" style="margin-top: 120px;">
+    <h2>Login to Continue</h2>
+    <form id="loginForm" style="margin-top: 1.5rem;">
+      <input type="email" id="loginEmail" placeholder="Email" required />
+      <input type="password" id="loginPassword" placeholder="Password" required />
+      <button type="submit" class="btn">Login</button>
     </form>
-  </section>
 
-  <footer class="footer">
-    <p>© 2025 Mautours. Secure access for travelers.</p>
-  </footer>
+    <div id="logoutSection" style="display:none; margin-top: 1.5rem;">
+      <p>You are logged in as <strong id="userEmail"></strong></p>
+      <button id="logoutBtn" class="btn">Logout</button>
+    </div>
+  </main>
 
-  <script type="module" src="js/auth.js"></script>
-  <script defer src="js/main.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js"></script>
+  <script src="js/firebase-config.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
