--- a/admin.html
+++ b/admin.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard | Mautours</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mautours – Dashboard</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
   <header class="site-header">
-    <div class="container">
+    <div class="nav-container">
       <h1 class="logo">Mautours</h1>
       <nav class="nav" id="nav">
         <a href="index.html">Home</a>
@@ -23,28 +22,32 @@
     </div>
   </header>
 
-  <section class="container fade-in">
-    <h2 class="center">Admin Dashboard</h2>
-    <p class="center">Manage bookings below.</p>
+  <main class="container center" style="margin-top: 120px;">
+    <h2>Admin Dashboard</h2>
+    <p>Manage bookings below:</p>
 
-    <table id="bookingTable">
+    <table id="bookingsTable">
       <thead>
         <tr>
+          <th>Name</th>
           <th>Package</th>
-          <th>Customer</th>
-          <th>Amount (Rs)</th>
+          <th>Email</th>
+          <th>Date</th>
+          <th>People</th>
           <th>Action</th>
         </tr>
       </thead>
       <tbody></tbody>
     </table>
-  </section>
 
-  <footer class="footer">
-    <p>© 2025 Mautours. Admin Dashboard.</p>
-  </footer>
+    <button id="logoutBtn" class="btn" style="margin-top: 1.5rem;">Logout</button>
+  </main>
 
-  <script type="module" src="js/admin.js"></script>
-  <script defer src="js/main.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
+  <script src="js/firebase-config.js"></script>
+  <script src="js/admin.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
