--- a/login.html
+++ b/login.html
@@ -22,17 +22,15 @@
     </div>
   </header>
 
-  <main class="container center" style="margin-top: 120px;">
-    <h2>Login to Continue</h2>
-    <form id="loginForm" style="margin-top: 1.5rem;">
-      <input type="email" id="loginEmail" placeholder="Email" required />
-      <input type="password" id="loginPassword" placeholder="Password" required />
-      <button type="submit" class="btn">Login</button>
-    </form>
-
-    <div id="logoutSection" style="display:none; margin-top: 1.5rem;">
-      <p>You are logged in as <strong id="userEmail"></strong></p>
-      <button id="logoutBtn" class="btn">Logout</button>
+  <main class="login-page">
+    <div class="login-box">
+      <h2>Sign In to Mautours</h2>
+      <form id="loginForm">
+        <input type="email" id="loginEmail" placeholder="Email" required />
+        <input type="password" id="loginPassword" placeholder="Password" required />
+        <button type="submit" class="btn">Login</button>
+      </form>
+      <p id="loginMessage" class="center"></p>
     </div>
   </main>
 
