--- a/login.html
+++ b/login.html
@@ -34,10 +34,7 @@
     </div>
   </main>
 
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js"></script>
-  <script src="js/firebase-config.js"></script>
-  <script src="js/auth.js"></script>
+  <script type="module" src="js/auth.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
