--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mautours – Explore Mauritius</title>
+  <title>Mautours – Discover Mauritius</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -26,67 +26,61 @@
   <!-- ===== Hero Section ===== -->
   <section class="hero">
     <div class="hero-content">
-      <h2>Discover the Magic of Mauritius</h2>
-      <p>From serene beaches to lush forests — your adventure begins here.</p>
-      <a href="booking.html" class="btn">Book Your Tour</a>
+      <h2>Explore the Beauty of Mauritius with Mautours</h2>
+      <p>Uncover breathtaking landscapes, turquoise lagoons, and unforgettable experiences across our paradise island.</p>
+      <a href="booking.html" class="btn">Book Your Trip</a>
     </div>
   </section>
 
-  <!-- ===== Our Most Loved Experiences (3D Carousel) ===== -->
-  <section class="loved-section fade-in">
+  <!-- ===== About Us Section ===== -->
+  <section id="about" class="container fade-in">
+    <h2>About Us</h2>
+    <p class="center">
+      At Mautours, we provide exceptional guided experiences, blending comfort, adventure, and the authentic beauty of Mauritius. 
+      Whether you're here for the sun, the sea, or the culture, we make sure your journey is unforgettable.
+    </p>
+  </section>
+
+  <!-- ===== Our Most Loved Experiences ===== -->
+  <section id="loved" class="container fade-in">
     <h2>Our Most Loved Experiences</h2>
+    <p class="center" style="color: var(--muted);">Discover why travelers love exploring Mauritius with Mautours.</p>
 
-    <div class="carousel-container">
-      <button class="carousel-btn prev" id="prevBtn">&#10094;</button>
-
-      <div class="carousel" id="carousel">
-        <div class="carousel-item">
-          <img src="assets/ile.jpg" alt="Île aux Cerfs" />
+    <div class="loved-grid">
+      <div class="loved-card">
+        <img src="assets/ile.jpg" alt="Île aux Cerfs" />
+        <div class="loved-info">
           <h3>Île aux Cerfs Adventure</h3>
-          <p>Golden beaches, turquoise waters, and a day of pure relaxation.</p>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/south.jpg" alt="South Tour" />
-          <h3>Southern Wonders Tour</h3>
-          <p>Discover Chamarel, the Seven Coloured Earth, and majestic waterfalls.</p>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/transfer.jpg" alt="Transfers" />
-          <h3>Private Island Transfers</h3>
-          <p>Seamless, comfortable rides to your dream destinations in style.</p>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/north.jpg" alt="Northern Discovery" />
-          <h3>Northern Discovery</h3>
-          <p>Explore Port Louis, Grand Baie, and the charm of the northern coast.</p>
+          <p>Crystal clear lagoons, golden beaches, and thrilling water sports await you on this breathtaking island.</p>
         </div>
       </div>
 
-      <button class="carousel-btn next" id="nextBtn">&#10095;</button>
+      <div class="loved-card">
+        <img src="assets/south.jpg" alt="South Tour" />
+        <div class="loved-info">
+          <h3>Southern Wonders Tour</h3>
+          <p>Visit the iconic Chamarel Waterfall, Seven Colored Earth, and Black River Gorges — a true nature escape.</p>
+        </div>
+      </div>
+
+      <div class="loved-card">
+        <img src="assets/transfer.jpg" alt="Transfers" />
+        <div class="loved-info">
+          <h3>Premium Airport Transfers</h3>
+          <p>Start and end your trip stress-free with reliable, air-conditioned, and affordable private transfers.</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- ===== About Us ===== -->
-  <section class="about-section fade-in">
-    <div class="container center">
-      <h2>About Us</h2>
-      <p>
-        At <strong>Mautours</strong>, we curate unforgettable experiences across Mauritius.
-        Whether it’s exploring the south or relaxing on Île aux Cerfs, we make your journey
-        effortless and memorable.
-      </p>
-    </div>
-  </section>
-
-  <!-- ===== Contact Us ===== -->
-  <section class="contact-section fade-in">
-    <div class="container center">
-      <h2>Contact Us</h2>
-      <p>
-        Have questions or custom requests?<br />
-        Reach us at <a href="mailto:info@mautours.com">info@mautours.com</a><br />
-        or call <strong>+230 5254 2792</strong>
-      </p>
+  <!-- ===== Contact Section ===== -->
+  <section id="contact" class="container fade-in">
+    <h2>Contact Us</h2>
+    <p class="center">Have a question or want to customize your experience? Reach out to our friendly support team.</p>
+    <div class="contact-info center" style="margin-top: 1.5rem;">
+      <p><strong>Phone:</strong> +230 5254 2792</p>
+      <p><strong>Email:</strong> info@mautours.com</p>
+      <p><strong>Location:</strong> Port Louis, Mauritius</p>
     </div>
   </section>
 
